fix page jump-around in mozilla when scrolling occurs

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -5,6 +5,11 @@ h4{
 	font-size:1.2em;
 	font-weight:normal;
 }
+html{
+ /* This prevents mozilla from shifting centered contents when a scrollbar appears.
+   It's basically like IE's behvaior, hwich always has a scrollbar present.*/
+ overflow: -moz-scrollbars-vertical !important;
+}
 /*
  * section menu
  */
